centos-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: centos-pod
  name: centos-pod
spec:
  containers:
  - image: centos
    stdin: true
    tty: true
    name: centos
