mysql-lp-enabled.yaml
    
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mysql-pod-lp-enabled
  name: mysql-pod-lp-enabled
spec:
  containers:
  - image: mysql
    name: mysql
    livenessProbe:
      tcpSocket:
        port: 3306
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 10
      failureThreshold: 3
    ports:
    - containerPort: 3306
      name: mysql-port
      protocol: TCP
